# labs

./: .gitignore
lab1/: bigint.cpp  bigint.h  main.cpp
lab2/: .gitignore  CMakeLists.txt  cells.txt  default.txt  dump.txt  dump_out.txt  gameconsole.cpp  gameconsole.h  gamefield.cpp  gamefield.h  gameinterface.cpp  gameinterface.h  glider.txt  height_width.txt  main.cpp  nearby.txt  test.cpp  test.txt  tick.txt  universe.cpp  universe.h
